--- a/app/src/assets/scss/scanLogs.scss
+++ b/app/src/assets/scss/scanLogs.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
 .card {
     border-radius: 15px;
@@ -241,6 +241,7 @@
           vertical-align: middle;
           font-size: 14px;
           font-weight: 500;
+          font-family: 'Open Sans', sans-serif;
           &:first-child{
             border-radius: 10px 0px 0px 10px !important;
           }
@@ -263,8 +264,14 @@
             tbody{
               td{
                 border: 0;
-          padding: 15px 20px;
+          padding: 15px 10px;
           vertical-align: middle;
+          color: #242424;
+          font-family: 'Open Sans', sans-serif;
+          div{
+            color: #888888;
+            font-size: 12px;
+          }
               }
             }
           }
